# reho-booth

./: .replit  README.md  add_mobile_css.sh  api.py  app.py  default_categories.js  fix_currency.sh  fix_project_templates.js  fix_userPreferences.py  fix_userPreferences_all.py  index.html  pyproject.toml  start_api.sh  update_currency.sh  update_default_projet.sh
attached_assets/: Pasted--Architecture-et-coh-rence-globale-Utiliser-un-seul-fichier-HTML-projet-vue-html-avec-deux-modes-1744396434263.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-meta-name-viewport-conte-1744392756273.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-meta-name-viewport-content-1744395552179.txt  Pasted--LES-VRAIS-PROBL-MES-QUI-FONT-QUE-A-NE-FONCTIONNE-PAS-COMPL-TEMENT-1-Le-champ-de-montant-amount-1744387909085.txt  Pasted--MODERN-UI-EXEMPLE-POUR-MAPOCKET-DOCTYPE-html-html-lang-fr-head-meta-charset-1744394116453.txt  Pasted--Voici-le-code-propre-et-stable-int-grer-pour-corriger-TOUT-a-load-project-js-js-Copier-Modi-1744382750662.txt  Pasted-FONCTION-recalculateAllAmounts-compl-te-et-propre-js-Copier-Modifier-function-recalculateAllAmou-1744387840198.txt  Pasted-Merci-pour-les-am-liorations-apport-es-La-cre-ation-et-modification-de-projet-est-d-sormais-possibl-1744300434981.txt  Pasted-Merci-pour-les-am-liorations-apport-es-La-modification-de-projet-est-d-sormais-possible-dans-une-ce-1744300397958.txt  Pasted-Nous-travaillons-actuellement-sur-la-page-mapocket-nouveau-projet-html-qui-sert-cr-er-un-nouveau--1744398702876.txt  defaultBudgets.js  (+3 more)
mapocket/: admin.html  (+21 more)
(+134 files in other folders)
